--- a/hooks/build
+++ b/hooks/build
@@ -1,3 +1,8 @@
 #!/usr/bin/env bash
 
-printenv
+if [ "$DOCKER_TAG" = "latest" ]; then
+	DOCKER_TAG=5
+fi
+
+docker build -t ${IMAGE_NAME} -f Dockerfile.${DOCKER_TAG} .
+
