--- a/hooks/build
+++ b/hooks/build
@@ -1,8 +1,14 @@
 #!/usr/bin/env bash
 
-if [ "$DOCKER_TAG" = "latest" ]; then
-	DOCKER_TAG=5
+LATEST_VERSION="5"
+
+if [ "$DOCKER_TAG" = "$LATEST_VERSION" ]; then
+	DOCKER_TAG=latest
 fi
 
-docker build -t ${IMAGE_NAME} -f Dockerfile.${DOCKER_TAG} .
-
+if [ "$DOCKER_TAG" = "latest" ]; then
+	docker build -t ${IMAGE_NAME} .
+else
+	## Fail if missing docker file
+	docker build -t ${IMAGE_NAME} -f Dockerfile.${DOCKER_TAG} .
+fi
